--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-API_KEY=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
+API_KEY = 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
